Add the font family to index.html and main.css files

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  font-family: "Roboto Slab", serif;
 }
 
 *, *::before, *::after {
@@ -24,4 +25,8 @@ body {
 .img-flex {
   display: block;
   width: 100%;
+}
+
+figure {
+  margin: 0;
 }
