--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Roboto Slab", serif;
+  font: normal 100%/1.3 "Roboto Slab", serif;
 }
 
 *, *::before, *::after {
@@ -29,4 +29,15 @@ body {
 
 figure {
   margin: 0;
+  position: relative;
+}
+
+figcaption {
+  max-width: 15em;
+  position: absolute;
+  bottom: .5rem;
+  left: .5rem;
+  background-color: rgba(0, 0, 0, .5);
+  color: #fff;
+  padding: 1rem;
 }
